Added Jammming web application to Projects section and React to Skills section

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -166,7 +166,7 @@ nav ul li {
     padding-top: 1rem;
 }
 
-.projects .project-content video {
+.projects .project-content img {
     width: 60%;
 }
 
