--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,35 +1,3 @@
-/*
-    Positioning:
-        - position
-        - z-index
-        - float
-
-    Aesthetic:
-        - border
-        - color
-        - background 
-        - width
-        - height
-
-    Spacing:
-        - margin
-        - padding
-
-    Formatting:
-        - display
-        - flex-direction
-        - justify-content
-        - align-items
-        - text-align
-        - flex
-
-    Font:
-        - font-family
-        - font-size
-        - font-weight
-        - text-decoration
-*/
-
 /* Universal */
 
 html {
@@ -38,16 +6,18 @@ html {
 }
 
 body {
-    background-color: beige;
-
     margin: 0;
 }
 
 main {
     position: relative;
 
-    top: 5.55rem;
-    /* margin-bottom: 5.55rem; */
+    background-image: url('../images/body-background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    top: 83px;
+    /*margin-bottom: 5.55rem;*/
 
     display: flex;
     flex-direction: column;
@@ -115,7 +85,9 @@ nav ul li {
 }
 
 .about {
-    background-color: violet;
+    background-image: url('../images/about-background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 
     display: flex;
 }
@@ -133,11 +105,15 @@ nav ul li {
 /* Projects Section */
 
 .projects {
-    background-color: cornflowerblue;
+    background-image: url('../images/projects-background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
     color: white;
 }
 
 .projects .headline {
+    cursor: pointer;
+
     display: flex;
     align-items: center;
 }
@@ -173,7 +149,9 @@ nav ul li {
 /* Skills Section */
 
 .skills {
-    background-color: chartreuse;
+    background-image: url('../images/skills-background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .skills .image-container {
@@ -214,7 +192,9 @@ nav ul li {
 /* Contacts Section */
 
 .contacts {
-    background-color: crimson;
+    background-image: url('../images/contacts-background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 
     color: white;
 }
